chore: 冗余swagger type到dto
